# pdf-to-excel

./: app.py  pyproject.toml  teste.py
src/: planilha.xlsx  planilha_a_ser_gerada.xlsx
