[project]
name = "pdf-to-excel"
version = "0.1.0"
description = ""
authors = [
    {name = "vitentovictor",email = "victorhugofreitas123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "pdf_to_excel", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
